<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:title="@string/bottom_navigation_txt_home"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/bottom_navigation_txt_search"
        android:icon="@drawable/search"/>

    <item
        android:id="@+id/action_download"
        android:title="@string/bottom_navigation_txt_download"
        android:icon="@drawable/download"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/bottom_navigation_txt_profile"
        android:icon="@drawable/profile"/>

  <!--  <item
        android:id="@+id/action_search"
        android:title="@string/bottom_navigation_txt_search"
        android:icon="@drawable/ic_search_black_24dp"/>

-->


</menu>