<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivDetail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:cornerRadius="@dimen/margin_6x" />

            <TextView
                android:id="@+id/tvCategoriesType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ivDetail"
                android:layout_marginStart="@dimen/margin_6x"
                android:layout_marginBottom="@dimen/margin_6x"
                android:background="@drawable/rounded_background"
                android:paddingStart="@dimen/margin_2x"
                android:paddingTop="@dimen/margin_4x"
                android:paddingEnd="@dimen/margin_2x"
                android:paddingBottom="@dimen/margin_4x"
                android:text="@string/art_design"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/podCastTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCategoriesType"
                android:layout_margin="@dimen/margin_4x"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/podCastTitle"
                android:layout_alignStart="@id/podCastTitle"
                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                android:text="12m" />

            <TextView
                android:id="@+id/tv_fave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_time"
                android:layout_marginStart="@dimen/margin_4x"
                android:layout_toEndOf="@id/tv_time"
                android:drawableLeft="@drawable/ic_baseline_favorite_border_24"
                android:text="88" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_fave"
                android:layout_marginStart="@dimen/margin_4x"
                android:layout_toEndOf="@id/tv_fave"
                android:drawableLeft="@drawable/ic_baseline_message_24"
                android:text="10" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_more"
                android:layout_width="@dimen/margin_7x"
                android:layout_height="@dimen/margin_7x"
                android:layout_below="@+id/podCastTitle"
                android:layout_alignEnd="@id/tv_message"
                android:layout_alignParentEnd="true"
                android:paddingLeft="@dimen/margin_2x"
                android:paddingRight="@dimen/margin_2x"
                android:src="@drawable/twodots" />

            <View
                android:id="@+id/line_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_time"
                android:layout_alignStart="@id/tv_time"
                android:layout_alignEnd="@id/iv_more"
                android:layout_marginTop="@dimen/margin_2x"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_one"
                android:layout_margin="@dimen/margin_4x"
                android:lineSpacingExtra="@dimen/margin_medium"
                android:text="@string/description" />


            <include
                android:id="@+id/media_playsmall"
                layout="@layout/media_playback_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>