<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cd_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_podcast"
                        android:layout_width="@dimen/margin_real_50x"
                        android:layout_height="@dimen/margin_real_50x"
                        android:layout_margin="@dimen/margin_2x"
                        android:src="@drawable/icon"
                        app:tint="@color/colorBlack" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/iv_podcast"
                        android:layout_alignBottom="@id/iv_podcast"
                        android:layout_marginStart="@dimen/margin_2x"
                        android:layout_toEndOf="@id/iv_podcast"
                        android:gravity="center"
                        android:text="@string/title_podcast"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivNotification"
                        android:layout_width="@dimen/margin_8x"
                        android:layout_height="@dimen/margin_8x"
                        android:layout_alignTop="@id/iv_podcast"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/margin_2x"
                        android:layout_marginEnd="@dimen/margin_2x"
                        android:background="@drawable/white_rounded_bg"
                        android:padding="@dimen/margin_2x"
                        android:src="@drawable/ic_baseline_notifications_none_24" />

                    <View
                        android:layout_width="@dimen/margin_2x"
                        android:layout_height="@dimen/margin_2x"
                        android:layout_alignEnd="@id/ivNotification"
                        android:layout_marginTop="@dimen/margin_4x"
                        android:layout_marginEnd="@dimen/margin_2x"
                        android:background="@drawable/noti" />

                    <include
                        android:id="@+id/mediaPlayBack_view"
                        layout="@layout/media_playback_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_podcast"
                        android:layout_marginTop="@dimen/margin_2x" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mediaPlayBack_view"
                        android:backgroundTint="@color/light_color"
                        app:cardCornerRadius="@dimen/margin_2x"
                        app:cardElevation="@dimen/margin_1x"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="@dimen/margin_2x">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tvdescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:lineSpacingMultiplier="1.5"
                                android:maxLines="7"
                                android:text="@string/sample_text"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_8x"
                    android:layout_marginStart="@dimen/margin_2x"
                    android:layout_marginEnd="@dimen/margin_2x"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/margin_1x"
                    android:scaleType="centerCrop"
                    android:text="@string/tv_next"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tv_more"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="@dimen/margin_8x"
                    android:paddingLeft="@dimen/margin_2x"
                    android:paddingRight="@dimen/margin_2x"
                    android:src="@drawable/twodots"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcomingshow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_selection" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>